--- a/Front-end/styles.css
+++ b/Front-end/styles.css
@@ -14,7 +14,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
-    background-color: #fff;
+    background-color: #e5ff00;
   }
   
   /* Left Content (Logo) */
