--- a/Front-end/styles.css
+++ b/Front-end/styles.css
@@ -16,7 +16,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1em 2em;
-  background-color: #E5FF00; /* Bright yellow background */
+  background-color: #FFC107; /* Bright yellow background */
 }
 
 .logo {
