--- a/Front-end/collection.css
+++ b/Front-end/collection.css
@@ -18,13 +18,13 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 1em 2em;
-    background-color: #E5FF00;
+    background-color: #000000;
 }
 
 .navbar .logo {
     font-weight: bold;
     font-size: 1.5em;
-    color: #000;
+    color: #ffffff;
     text-decoration: none;
 }
 
@@ -34,14 +34,14 @@ body {
 }
 
 .nav-links a {
-    color: #000;
+    color: #f5f5f5;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s ease;
 }
 
 .nav-links a.active {
-    color: #000;
+    color: #fff3f3;
     font-weight: bold;
     text-decoration: underline;
 }
@@ -60,13 +60,13 @@ body {
 }
 
 .nav-icons a {
-    color: #000;
+    color: #ffffff;
     font-size: 1.2em;
     text-decoration: none;
 }
 
 .navbar .icons a {
-    color: #000;
+    color: #fdf7f7;
     font-size: 1.2em;
     margin-left: 1em;
 }
