--- a/Front-end/login.css
+++ b/Front-end/login.css
@@ -19,7 +19,7 @@ body {
     display: flex;
     width: 800px;
     height: 500px;
-    background-color: #FFD700;
+    background-color: white;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
