--- a/Front-end/new-arrival.css
+++ b/Front-end/new-arrival.css
@@ -17,7 +17,7 @@ main {
 /* Body Styling */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #000000;
     color: #333;
 }
 
@@ -34,7 +34,7 @@ body {
     text-align: center;
     margin: 40px 0;
     font-size: 2.5rem;
-    color: #333;
+    color: #ffffff;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
