--- a/Front-end/css/kids.css
+++ b/Front-end/css/kids.css
@@ -1,7 +1,7 @@
 /* Kids Page Specific Styles */
 .collection {
     padding: 2rem;
-    background-color: #FFD700; /* Yellow background color */
+    background-color: #FFD700; 
 }
 
 .container {
