--- a/Front-end/css/new-arrival.css
+++ b/Front-end/css/new-arrival.css
@@ -1,4 +1,4 @@
-/* Reset */
+
 * {
     margin: 0;
     padding: 0;
@@ -7,10 +7,10 @@
 
 /* Container Layout */
 main {
-    min-height: calc(100vh - 160px); /* Adjust based on header/footer height */
-    padding-top: 80px; /* Add padding to account for fixed header */
+    min-height: calc(100vh - 160px);
+    padding-top: 80px; 
     width: 100%;
-    max-width: 1440px; /* Maximum width for larger screens */
+    max-width: 1440px; 
     margin: 0 auto;
 }
 
@@ -95,7 +95,7 @@ body {
 .product-image {
     position: relative;
     width: 100%;
-    padding-top: 100%; /* 1:1 Aspect Ratio */
+    padding-top: 100%; 
     overflow: hidden;
     background-color: #f8f8f8;
 }
